--- a/app/globals.css
+++ b/app/globals.css
@@ -19,22 +19,18 @@
     box-sizing: border-box;
   }
   
-  html {
-    background-color: #101114;
-  }
-  
   @layer utilities {
     .input-class {
       @apply text-16 placeholder:text-16 bg-black-1 rounded-[6px] placeholder:text-gray-1 border-none text-gray-1;
     }
-    .podcast_grid {
-      @apply grid grid-cols-1 gap-5 sm:grid-cols-2 lg:grid-cols-3 2xl:grid-cols-4;
+    .tale_grid {
+      @apply grid grid-cols-1 gap-10 sm:grid-cols-2 lg:grid-cols-3 2xl:grid-cols-4;
     }
     .right_sidebar {
-      @apply sticky right-0 top-0 flex w-[310px] flex-col overflow-y-hidden border-none bg-black-1 px-[30px] pt-8 max-xl:hidden;
+      @apply sticky right-0 top-0 flex w-[360px] flex-col overflow-y-hidden border-none bg-black-2 px-[30px] pt-8 max-xl:hidden;
     }
     .left_sidebar {
-      @apply sticky left-0 top-0 flex w-fit flex-col  justify-between  border-none  bg-black-1 pt-8 text-white-1 max-md:hidden lg:w-[270px] lg:pl-8;
+      @apply sticky left-0 top-0 flex w-fit flex-col  justify-between  border-none  bg-black-2 pt-8 text-white-1 max-md:hidden lg:w-[300px] lg:pl-8;
     }
     .generate_thumbnail {
       @apply mt-[30px] flex w-full max-w-[520px] flex-col justify-between gap-2 rounded-lg border border-black-6 bg-black-1 px-2.5 py-2 md:flex-row md:gap-0;
