--- a/app/globals.css
+++ b/app/globals.css
@@ -23,6 +23,9 @@
     .input-class {
       @apply text-16 placeholder:text-16 bg-black-1 rounded-[6px] placeholder:text-gray-1 border-none text-gray-1;
     }
+    .main_title {
+      @apply text-24 font-bold text-slate-50 mb-5;
+    }
     .tale_grid {
       @apply grid grid-cols-1 gap-10 sm:grid-cols-2 lg:grid-cols-3 2xl:grid-cols-4;
     }
