--- a/app/globals.css
+++ b/app/globals.css
@@ -33,7 +33,7 @@
       @apply sticky right-0 top-0 flex w-[360px] flex-col overflow-y-hidden border-none bg-black-2 px-[30px] pt-8 max-xl:hidden;
     }
     .left_sidebar {
-      @apply sticky left-0 top-0 flex w-fit flex-col  justify-between  border-none  bg-black-2 pt-8 text-white-1 max-md:hidden lg:w-[300px] lg:pl-8;
+      @apply sticky left-0 top-0 flex w-fit flex-col  justify-between  border-none  bg-black-2 pt-8 text-white-1 max-md:hidden md:w-[300px] md:pl-8;
     }
     .generate_thumbnail {
       @apply mt-[30px] flex w-full max-w-[520px] flex-col justify-between gap-2 rounded-lg border border-black-6 bg-black-1 px-2.5 py-2 md:flex-row md:gap-0;
@@ -171,4 +171,8 @@
   
   .capitalize-first::first-letter {
     text-transform: uppercase; 
+  }
+
+  .mobile-menu {
+    padding: 1.5rem 0 0 1.5rem;
   }
