--- a/app/globals.css
+++ b/app/globals.css
@@ -27,7 +27,7 @@
       @apply text-24 font-bold text-slate-50 mb-5;
     }
     .tale_grid {
-      @apply grid grid-cols-1 gap-10 sm:grid-cols-2 lg:grid-cols-3 2xl:grid-cols-4;
+      @apply grid grid-cols-2 gap-6 lg:gap-10 lg:grid-cols-3 2xl:grid-cols-4;
     }
     .right_sidebar {
       @apply sticky right-0 top-0 flex w-[360px] flex-col overflow-y-hidden border-none bg-black-2 px-[30px] pt-8 max-xl:hidden;
